--- a/Classification of Handwritten Digits/Data preprocessing/task.html
+++ b/Classification of Handwritten Digits/Data preprocessing/task.html
@@ -1,3 +1,4 @@
+<div class="step-text">
 <h5 id="description">Description</h5>
 <p>At this stage, we will improve model performance by preprocessing the data. We will see how normalization affects the accuracy. Recall that normalization scales values of features from 0 to 1.</p>
 <h5 id="objectives">Objectives</h5>
@@ -8,9 +9,9 @@
 <li>Answer the following questions: 
 	<ul>
 <li>Does the normalization have a positive impact in general? (yes/no)</li>
-<li>Which two models show the best scores?</li>
+<li>Which two models show the best scores? Round the result to the third decimal place and print the accuracy of models in descending order in the format shown below.</li>
 </ul>
-	Round the result to the third decimal place and print the accuracy of models in descending order in the format shown below.</li>
+</li>
 </ol>
 <p>The normalizer's inputs includes train and test sets from Stage 2. The output consists of the preprocessed train and test sets.</p>
 <p>Make sure your output format matches the example below.</p>
@@ -32,3 +33,4 @@ The answer to the 1st question: no
 
 The answer to the 2nd question: FriendsClassifier-0.995, RandomFlowerClassifier-0.985
 </code></pre>
+</div>
